--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [wheel]
 universal=1
+
+[bumpversion]
+current_version = 1.10.0
+commit = True
+tag = True
+message = Bump version from {current_version} to {new_version}
+
+[bumpversion:file:setup.py]
