update releasing in README

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ universal=1
 current_version = 1.10.0
 commit = True
 tag = True
+tag_name = {new_version}
 message = Bump version from {current_version} to {new_version}
 
 [bumpversion:file:setup.py]
