implemented time_reporter architecture for reporting msg timings with plugins
refs thugs-1746

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@
 version: '3'
 services:
   rabbitmq:
-    image: "rabbitmq:3.6-management-alpine"
+    image: "sparkplug_tester_rmq:latest"
     ports:
       # The standard AMQP protocol port
       - '5672:5672'
