--- a/sparkplug/test/test_heartbeat/test.ini
+++ b/sparkplug/test/test_heartbeat/test.ini
@@ -36,12 +36,17 @@ exchange = postoffice
 # The routing key to bind under (optional for some exchange types)
 routing_key = events
 
+[time_reporter:mylogger]
+use = sparkplug#logger
+aggregation_count = 10
+level = INFO
+
 [consumer:heartbeat]
 # Entry point identifier
 use = sparkplug#heartbeat
 # Queue to consume against
 queue = events
-
+time_reporters = mylogger
 
 # Configure Python logging
 #
