explicit control over qos to avoid TCP connection drops
refs thugs-1746

--- a/sparkplug/test/test_heartbeat/test.ini
+++ b/sparkplug/test/test_heartbeat/test.ini
@@ -9,6 +9,7 @@ userid = guest
 password = guest
 # If set, forces the use of SSL to connect to the broker.
 ssl = False
+qos = 32
 
 [queue:events]
 # Will the queue be declared as durable, and survive broker restarts?
