--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - "rabbitmq"
       - "cons"
-    command: ["sh", "-c", "sleep 20; python3 /app/sparkplug/test/test_heartbeat/publish_msgs.py"]
+    command: ["sh", "-c", "sleep 20; python /app/sparkplug/test/test_heartbeat/publish_msgs.py"]
     networks:
       - sparkplug_test_net
 networks:
