--- a/sparkplug/test/test_heartbeat/double.ini
+++ b/sparkplug/test/test_heartbeat/double.ini
@@ -42,7 +42,14 @@ use = sparkplug#logger
 aggregation_count = 10
 level = INFO
 
-[consumer:heartbeat]
+[consumer:heartbeat1]
+# Entry point identifier
+use = sparkplug#heartbeat
+# Queue to consume against
+queue = events
+time_reporters = mylogger
+
+[consumer:heartbeat2]
 # Entry point identifier
 use = sparkplug#heartbeat
 # Queue to consume against
@@ -51,8 +58,6 @@ time_reporters = mylogger
 
 # Configure Python logging
 #
-# For daemon mode, you probably want to send this to a file or to syslog,
-# not to stdout.
 [loggers]
 keys=root
 
