--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,15 @@ dist: 'trusty'
 python:
   - "2.7"
   - "3.6"
+  - "3.7"
+  - "3.8"
 
 matrix:
   include:
     - python: "2.7"
     - python: "3.6"
+    - python: "3.7"
+    - python: "3.8"
 
 before_install:
   - sudo apt-get -qq update
