ref NEODXP-869; fix private artifactory repository access, fix flake issue with automerge action

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ registries:
 
 updates:
 - package-ecosystem: pip
+  insecure-external-code-execution: allow
   directory: "/"
   schedule:
     interval: daily
